--- a/frontend/src/components/game_page/gPage.css
+++ b/frontend/src/components/game_page/gPage.css
@@ -39,14 +39,14 @@
 
 .gameDesc {
     margin-top: 10px;
-    position: relative;
+    /* position: relative; */
     width: 65%;
     float: left;
 }
 
 .buyContainer {
     background: linear-gradient( -60deg, rgba(226,244,255,0.3) 5%,rgba(84, 107, 115, 0.3) 95%);
-    position: relative;
+    /* position: relative; */
     font-size: 21px;
     border-radius: 4px;
     padding: 16px;
@@ -74,7 +74,7 @@
 }
 
 .buyGame {
-    position: absolute;
+    /* position: absolute; */
     padding-right: 20px;
     bottom: -16px;
     right: 16px;
