--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     align-items: center;
     font-family: sans-serif;
+    padding: 2.5%;
 }
 
 .headerTopics{
@@ -80,7 +81,7 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    height: 15.5%;
+    /* height: 15.5%; */
     width: 90%;
     background-color: #171A21;
 } 
